- fixed FindBugs errors